Fri Aug 14 11:50:27 BST 2009  Colin Watson  <cjwatson@debian.org>

	Move ChangeLog and NEWS to their more conventional location at the
	top level.

	* docs/ChangeLog: Move to ...
	* ChangeLog: ... here.
	* docs/NEWS: Move to ...
	* NEWS: ... here.
	* README, docs/HACKING (Revision control, Release process),
	  src/check_mandirs.c: Update references.

Fri Aug 14 11:43:41 BST 2009  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Use silent rules by default if Automake 1.11 is
	  available.
	* man/Rules.man (replace.sed, .man1.1, .man5.5, .man8.8): Be quieter
	  in silent mode.

	Upgrade to Autoconf 2.64, Automake 1.11, and Gnulib 20090801.

Mon Aug  3 17:13:19 BST 2009  Colin Watson  <cjwatson@debian.org>

	* src/encodings.c (less_charset_table): Add CP1251 -> windows, per
	  less(1) (Debian bug #539690).

Wed Jul 22 10:48:10 BST 2009  Colin Watson  <cjwatson@debian.org>

	Make whatis/apropos only display any given manual page, or pointers
	to it, once (Ubuntu bug #27113).

	* lib/hashtable.c (hash_lookup_structure): Make external.
	* lib/hashtable.h (hash_lookup_structure): Add prototype.
	* src/whatis.c (get_whatis): Split pointer resolution out to ...
	  (resolve_pointers): ... here. Only accept info->pointer == page if
	  info->name == page too.
	  (display): Use resolve_pointers so that we have the resolved name
	  to hand. Only display any given resolved name once.
	  (main): Initialise display_seen hash table.
	* docs/NEWS: Document this.

Tue Jul 21 22:05:01 BST 2009  Colin Watson  <cjwatson@debian.org>

	* docs/NEWS: Fix typo.

Tue Jul 21 15:17:49 BST 2009  Colin Watson  <cjwatson@debian.org>

	* man/man1/man.man1 (Controlling formatted output, ENVIRONMENT):
	  Explicitly state that -P/$PAGER/$MANPAGER identifies a single
	  command with no pipes (Debian bug #363250).

Mon Jul 20 10:59:00 BST 2009  Colin Watson  <cjwatson@debian.org>

	* src/man.c (locale_macros): Fix groff version test not to think
	  that 1.20.1 >= 1.20.2.
